added teacher, home work, discipline
added teacher, home work, discipline

--- a/src/Views/templates/university.html.twig
+++ b/src/Views/templates/university.html.twig
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>University</h1>
+    <h1>Geekhub University</h1>
     <table class="table table-bordered">
         <tr>
             <th>#</th>
