--- a/src/Views/templates/departament.html.twig
+++ b/src/Views/templates/departament.html.twig
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Departament</h1>
+    <h1>Geekhub Departament</h1>
     <table class="table table-bordered">
         <tr>
             <th>#</th>
