--- a/src/Views/templates/results.html.twig
+++ b/src/Views/templates/results.html.twig
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Student results</h1>
+    <h1>Geekhub Student results</h1>
     <table class="table table-bordered">
         <tr>
             <th>First name</th>
