--- a/src/Views/templates/students.html.twig
+++ b/src/Views/templates/students.html.twig
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Students</h1>
+    <h1>Geekhub Students</h1>
     <table class="table table-bordered">
         <tr>
             <th>#</th>
